--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,8 @@
 /* подключаем шрифты */
 
 @font-face {
-	src: url(fonts/EuropeExt Bold.ttf);
-	font-style: 'EuropeExt Bold';
+	src: url('fonts/EuropeExt Bold.ttf');
+	font-family: 'EuropeExt Bold';
 }
 
 /* отменяем отступы */
@@ -43,3 +43,40 @@ ul {
 	background: url(img/bg-first-block.png) no-repeat;
 }
 
+/* оформление блока с контактами */
+
+.logotype {
+	display: flex;
+	justify-content: space-between;
+}
+
+.block-contacts {
+	display: flex;
+	flex-direction: column;
+}
+
+.in-social {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.fildsearch {
+	display: flex;
+	flex-direction: row;
+}
+
+/* задаём размер слайдера */
+.slider-block {
+	position: relative;
+	padding-bottom: 100px;
+}
+
+.slider {
+	position: relative;
+	overflow: hidden;
+	width: 980px;
+	height: 492px;
+	margin: 0 auto;
+	padding-top: 16px;
+	z-index: 2;
+}
