--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 	padding: 7px 0;
 }
 
-.list:hover {
+.is-active:hover {
 	border-top: 3px solid #fff;
 	border-bottom: 3px solid #fff;
 }
@@ -41,7 +41,7 @@
 }
 
 a[href="https://instagram.com"]{
-	margin-right: 8px;
+	margin-right: 2px;
 }
 
 .contacts {
@@ -105,10 +105,18 @@ input[type="search"] {
 
 /* стилизация поиска */
 
-button[type="submit"] {
+.btn-submit {
 	border: none;
-	background: none;
+	background: url(/css/img/search.png);
+	background-position: 0 0; 
+	height: 19px;
+	width: 19px;
 	padding: 0;
+	cursor: pointer;
+}
+
+.btn-submit:hover {
+	background-position: -19px 0;
 }
 
 /* задаём размер изображений для слайдера */
@@ -681,6 +689,8 @@ button[type="submit"] {
 	display: flex;
 	justify-content: center;
 	padding: 55px 0 0;
+	position: relative;
+	z-index: 3;
 }
 
 .logo4 {
@@ -692,6 +702,8 @@ button[type="submit"] {
 	display: flex;
 	justify-content: center;
 	margin-bottom: 23px;
+	position: relative;
+	z-index: 3;
 }
 
 .head-four-txt {
@@ -738,12 +750,15 @@ button[type="submit"] {
 	padding: 10px 19px 10px 10px;
 }
 
+.row {
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+}
+
 .row:first-child {
 	background: #01983b;
 	background-image: url(/css/img/pattern.png);
 	color: #fff;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
 }
 
 .row:nth-child(n+2) {
@@ -802,7 +817,7 @@ button[type="submit"] {
 .sad-smile,
 .smile {
 	height: 30px;
-	margin: 5px 5px;
+	margin: 5px 10px;
 }
 
 .sad-txt,
@@ -865,14 +880,14 @@ button[type="submit"] {
 	position: absolute;
 	top: -92px;
 	left: 2px;
-	z-index: -1;
+	z-index: 1;
 }
 
 .tasks-background2 {
 	position: absolute;
 	top: -77px;
 	right: -111px;
-	z-index: -1;
+	z-index: 1;
 }
 
 /* шестой блок сертификатов */
@@ -930,8 +945,8 @@ button[type="submit"] {
 	text-align: center;
 	position: relative;
 	z-index: 2;
-	top: 22px;
-	left: 2px;
+	top: -6px;
+	left: 8px;
 	padding-bottom: 27px;
 	box-shadow: 1px 5px 3px rgba(0, 0, 0, 0.5);
 }
@@ -942,29 +957,39 @@ button[type="submit"] {
 	font-size: 30px;
 	color: #fff;
 	text-transform: uppercase;
-	padding-top: 30px;
+	padding: 30px 0 6px;
+	margin: 30px 0 0;
 }
 
 .contact-header,
-.contact-adress,
-.contact-phone {
-	font-family: 'Arial', Regular;
+.contact-adress {
+	font-family: Arial, sans-serif;
 	font-size: 18px;
 	color: #fff;
 	margin: 3px;
 }
 
-.contact-header {
-	text-transform: uppercase;
+.footer-contacts {
+	margin: 8px;
 }
 
-.contact-phone {
+.footer-contacts > a {
+	font-family: Arial, sans-serif;
 	font-size: 14px;
-	margin: 14px;
+	color: #fff;
+	text-decoration: none;
 }
 
-#mail {
+.footer-mail__active {
+	font-family: Arial, sans-serif;
+	font-size: 14px;
 	color: #fff;
+	text-decoration: none;
+}
+
+.footer-phone__active:hover,
+.footer-mail__active:hover {
+	text-decoration: underline;
 }
 
 .google {
